Message overflow + Lengthy name bugs fixed

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -80,4 +80,5 @@
 .panelContainer {
   width: 100%;
   overflow-y: auto;
+  overflow: hidden;
 }
